@@ -6,6 +6,7 @@
  - Retired result row slicing.
  - Retired `connection_base` type alias.  Use `connection`.
  - Retired `pqxx::encrypt_password()`.  Use the ones in `pqxx::connection`.
+ - Retired `pqxx::prepare::dynamic_params`.  Use `pqxx::params` instead.
  - Assume compiler supports concepts.
  - Assume compiler supports integral conversions in `charconv`.
  - Assume compiler supports spans, ranges, and `cmp_less` etc.
